src/four_fingerprint.h

/* Data structures */

typedef struct {
    int32_t x;
    int32_t y;
    int32_t direction;  /* degrees * 10 */
    int32_t type;       /* 0=bifurcation, 1=ridge ending */
    double reliability;  /* 0.0 - 1.0 */
} FpMinutia;
typedef struct {
    int32_t min_x;
    int32_t min_y;
    int32_t max_x;
    int32_t max_y;
} FpBoundingBox;
/* ===== Public FFI functions ===== */

/* 1. Scale / DPI calibration */
int32_t fp_calibrate_scale(
    const uint8_t *rgb_frame, int32_t width, int32_t height,
    const float *hand_landmarks, int32_t landmark_count,
    const int32_t *finger_codes, int32_t num_fingers,
    float *out_scale_factor
);
/* 2. Finger segmentation mask */
int32_t fp_segment_fingers(
    const uint8_t *grayscale_img, int32_t width, int32_t height,
    const float *hand_landmarks, int32_t landmark_count,
    uint8_t *out_mask,
    FpBoundingBox *out_boxes, int32_t max_fingers,
    int32_t *out_num_fingers
);
/* 3. Illumination normalization + specular highlight removal */
int32_t fp_normalize_illumination(
    const uint8_t *input_img, int32_t width, int32_t height,
    uint8_t *output_img
);
/* 4. Cylindrical surface unwarping */
int32_t fp_unwarp_cylindrical(
    const uint8_t *input_img, int32_t width, int32_t height,
    const FpBoundingBox *finger_roi,
    float finger_width_mm, float finger_length_mm,
    uint8_t *output_img, int32_t out_width, int32_t out_height,
    float *out_scale_factor
);
/* 5. Liveness / anti-spoofing gate */
int32_t fp_check_liveness(
    const uint8_t *grayscale_img, int32_t width, int32_t height,
    const float *hand_landmarks, int32_t landmark_count,
    int32_t *out_is_live
);
/* 6. NFIQ2 quality assessment */
int32_t fp_init_nfiq2(const char *model_dir);
int32_t fp_assess_quality(
    const uint8_t *grayscale_img, int32_t width, int32_t height,
    int32_t ppi, int32_t finger_code,
    int32_t *out_quality_score
);
/* 7. Minutiae extraction (MINDTCT) */
int32_t fp_extract_minutiae(
    const uint8_t *grayscale_img, int32_t width, int32_t height,
    int32_t ppi,
    FpMinutia *out_minutiae, int32_t max_minutiae,
    int32_t *out_num_minutiae
);
/* 8. Template matching (BOZORTH3) */
int32_t fp_match_templates(
    const FpMinutia *probe, int32_t probe_count,
    const FpMinutia *gallery, int32_t gallery_count,
    int32_t *out_match_score
);
/* 9. ISO/IEC 19794-2 template export */
int32_t fp_export_iso_template(
    const FpMinutia *minutiae, int32_t count,
    int32_t finger_position, int32_t ppi,
    uint8_t *out_buffer, int32_t buffer_size,
    int32_t *out_length
);
/* 10. WSQ compression / decompression */
int32_t fp_wsq_compress(
    const uint8_t *grayscale_img, int32_t width, int32_t height,
    int32_t ppi, uint8_t *out_buffer, int32_t buffer_size,
    int32_t *out_length
);