lib/four_fingerprint_bindings_generated.dart

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint, unused_import
import 'dart:ffi' as ffi;

/// Bindings for `src/four_fingerprint.h`.
///
/// Regenerate bindings with `dart run ffigen --config ffigen.yaml`.
///
class FourFingerprintBindings {
  /// Holds the symbol lookup function.
  final ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
  _lookup;

  /// The symbols are looked up in [dynamicLibrary].
  FourFingerprintBindings(ffi.DynamicLibrary dynamicLibrary)
    : _lookup = dynamicLibrary.lookup;

  /// The symbols are looked up with [lookup].
  FourFingerprintBindings.fromLookup(
    ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName) lookup,
  ) : _lookup = lookup;

  /// 1. Scale / DPI calibration
  int fp_calibrate_scale(
    ffi.Pointer<ffi.Uint8> rgb_frame,
    int width,
    int height,
    ffi.Pointer<ffi.Float> hand_landmarks,
    int landmark_count,
    ffi.Pointer<ffi.Int32> finger_codes,
    int num_fingers,
    ffi.Pointer<ffi.Float> out_scale_factor,
  ) {
    return _fp_calibrate_scale(
      rgb_frame,
      width,
      height,
      hand_landmarks,
      landmark_count,
      finger_codes,
      num_fingers,
      out_scale_factor,
    );
  }

  late final _fp_calibrate_scalePtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int32 Function(
            ffi.Pointer<ffi.Uint8>,
            ffi.Int32,
            ffi.Int32,
            ffi.Pointer<ffi.Float>,
            ffi.Int32,
            ffi.Pointer<ffi.Int32>,
            ffi.Int32,
            ffi.Pointer<ffi.Float>,
          )
        >
      >('fp_calibrate_scale');
  late final _fp_calibrate_scale = _fp_calibrate_scalePtr
      .asFunction<
        int Function(
          ffi.Pointer<ffi.Uint8>,
          int,
          int,
          ffi.Pointer<ffi.Float>,
          int,
          ffi.Pointer<ffi.Int32>,
          int,
          ffi.Pointer<ffi.Float>,
        )
      >();

  /// 2. Finger segmentation mask
  int fp_segment_fingers(
    ffi.Pointer<ffi.Uint8> grayscale_img,
    int width,
    int height,
    ffi.Pointer<ffi.Float> hand_landmarks,
    int landmark_count,
    ffi.Pointer<ffi.Uint8> out_mask,
    ffi.Pointer<FpBoundingBox> out_boxes,
    int max_fingers,
    ffi.Pointer<ffi.Int32> out_num_fingers,
  ) {
    return _fp_segment_fingers(
      grayscale_img,
      width,
      height,
      hand_landmarks,
      landmark_count,
      out_mask,
      out_boxes,
      max_fingers,
      out_num_fingers,
    );
  }

  late final _fp_segment_fingersPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int32 Function(
            ffi.Pointer<ffi.Uint8>,
            ffi.Int32,
            ffi.Int32,
            ffi.Pointer<ffi.Float>,
            ffi.Int32,
            ffi.Pointer<ffi.Uint8>,
            ffi.Pointer<FpBoundingBox>,
            ffi.Int32,
            ffi.Pointer<ffi.Int32>,
          )
        >
      >('fp_segment_fingers');
  late final _fp_segment_fingers = _fp_segment_fingersPtr
      .asFunction<
        int Function(
          ffi.Pointer<ffi.Uint8>,
          int,
          int,
          ffi.Pointer<ffi.Float>,
          int,
          ffi.Pointer<ffi.Uint8>,
          ffi.Pointer<FpBoundingBox>,
          int,
          ffi.Pointer<ffi.Int32>,
        )
      >();

  /// 3. Illumination normalization + specular highlight removal
  int fp_normalize_illumination(
    ffi.Pointer<ffi.Uint8> input_img,
    int width,
    int height,
    ffi.Pointer<ffi.Uint8> output_img,
  ) {
    return _fp_normalize_illumination(input_img, width, height, output_img);
  }

  late final _fp_normalize_illuminationPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int32 Function(
            ffi.Pointer<ffi.Uint8>,
            ffi.Int32,
            ffi.Int32,
            ffi.Pointer<ffi.Uint8>,
          )
        >
      >('fp_normalize_illumination');
  late final _fp_normalize_illumination = _fp_normalize_illuminationPtr
      .asFunction<
        int Function(ffi.Pointer<ffi.Uint8>, int, int, ffi.Pointer<ffi.Uint8>)
      >();

  /// 4. Cylindrical surface unwarping
  int fp_unwarp_cylindrical(
    ffi.Pointer<ffi.Uint8> input_img,
    int width,
    int height,
    ffi.Pointer<FpBoundingBox> finger_roi,
    double finger_width_mm,
    double finger_length_mm,
    ffi.Pointer<ffi.Uint8> output_img,
    int out_width,
    int out_height,
    ffi.Pointer<ffi.Float> out_scale_factor,
  ) {
    return _fp_unwarp_cylindrical(
      input_img,
      width,
      height,
      finger_roi,
      finger_width_mm,
      finger_length_mm,
      output_img,
      out_width,
      out_height,
      out_scale_factor,
    );
  }

  late final _fp_unwarp_cylindricalPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int32 Function(
            ffi.Pointer<ffi.Uint8>,
            ffi.Int32,
            ffi.Int32,
            ffi.Pointer<FpBoundingBox>,
            ffi.Float,
            ffi.Float,
            ffi.Pointer<ffi.Uint8>,
            ffi.Int32,
            ffi.Int32,
            ffi.Pointer<ffi.Float>,
          )
        >
      >('fp_unwarp_cylindrical');
  late final _fp_unwarp_cylindrical = _fp_unwarp_cylindricalPtr
      .asFunction<
        int Function(
          ffi.Pointer<ffi.Uint8>,
          int,
          int,
          ffi.Pointer<FpBoundingBox>,
          double,
          double,
          ffi.Pointer<ffi.Uint8>,
          int,
          int,
          ffi.Pointer<ffi.Float>,
        )
      >();

  /// 5. Liveness / anti-spoofing gate
  int fp_check_liveness(
    ffi.Pointer<ffi.Uint8> grayscale_img,
    int width,
    int height,
    ffi.Pointer<ffi.Float> hand_landmarks,
    int landmark_count,
    ffi.Pointer<ffi.Int32> out_is_live,
  ) {
    return _fp_check_liveness(
      grayscale_img,
      width,
      height,
      hand_landmarks,
      landmark_count,
      out_is_live,
    );
  }

  late final _fp_check_livenessPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int32 Function(
            ffi.Pointer<ffi.Uint8>,
            ffi.Int32,
            ffi.Int32,
            ffi.Pointer<ffi.Float>,
            ffi.Int32,
            ffi.Pointer<ffi.Int32>,
          )
        >
      >('fp_check_liveness');
  late final _fp_check_liveness = _fp_check_livenessPtr
      .asFunction<
        int Function(
          ffi.Pointer<ffi.Uint8>,
          int,
          int,
          ffi.Pointer<ffi.Float>,
          int,
          ffi.Pointer<ffi.Int32>,
        )
      >();

  /// 6. NFIQ2 quality assessment
  int fp_init_nfiq2(ffi.Pointer<ffi.Char> model_dir) {
    return _fp_init_nfiq2(model_dir);
  }

  late final _fp_init_nfiq2Ptr =
      _lookup<ffi.NativeFunction<ffi.Int32 Function(ffi.Pointer<ffi.Char>)>>(
        'fp_init_nfiq2',
      );
  late final _fp_init_nfiq2 = _fp_init_nfiq2Ptr
      .asFunction<int Function(ffi.Pointer<ffi.Char>)>();

  int fp_assess_quality(
    ffi.Pointer<ffi.Uint8> grayscale_img,
    int width,
    int height,
    int ppi,
    int finger_code,
    ffi.Pointer<ffi.Int32> out_quality_score,
  ) {
    return _fp_assess_quality(
      grayscale_img,
      width,
      height,
      ppi,
      finger_code,
      out_quality_score,
    );
  }

  late final _fp_assess_qualityPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int32 Function(
            ffi.Pointer<ffi.Uint8>,
            ffi.Int32,
            ffi.Int32,
            ffi.Int32,
            ffi.Int32,
            ffi.Pointer<ffi.Int32>,
          )
        >
      >('fp_assess_quality');
  late final _fp_assess_quality = _fp_assess_qualityPtr
      .asFunction<
        int Function(
          ffi.Pointer<ffi.Uint8>,
          int,
          int,
          int,
          int,
          ffi.Pointer<ffi.Int32>,
        )
      >();

  /// 7. Minutiae extraction (MINDTCT)
  int fp_extract_minutiae(
    ffi.Pointer<ffi.Uint8> grayscale_img,
    int width,
    int height,
    int ppi,
    ffi.Pointer<FpMinutia> out_minutiae,
    int max_minutiae,
    ffi.Pointer<ffi.Int32> out_num_minutiae,
  ) {
    return _fp_extract_minutiae(
      grayscale_img,
      width,
      height,
      ppi,
      out_minutiae,
      max_minutiae,
      out_num_minutiae,
    );
  }

  late final _fp_extract_minutiaePtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int32 Function(
            ffi.Pointer<ffi.Uint8>,
            ffi.Int32,
            ffi.Int32,
            ffi.Int32,
            ffi.Pointer<FpMinutia>,
            ffi.Int32,
            ffi.Pointer<ffi.Int32>,
          )
        >
      >('fp_extract_minutiae');
  late final _fp_extract_minutiae = _fp_extract_minutiaePtr
      .asFunction<
        int Function(
          ffi.Pointer<ffi.Uint8>,
          int,
          int,
          int,
          ffi.Pointer<FpMinutia>,
          int,
          ffi.Pointer<ffi.Int32>,
        )
      >();

  /// 8. Template matching (BOZORTH3)
  int fp_match_templates(
    ffi.Pointer<FpMinutia> probe,
    int probe_count,
    ffi.Pointer<FpMinutia> gallery,
    int gallery_count,
    ffi.Pointer<ffi.Int32> out_match_score,
  ) {
    return _fp_match_templates(
      probe,
      probe_count,
      gallery,
      gallery_count,
      out_match_score,
    );
  }

  late final _fp_match_templatesPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int32 Function(
            ffi.Pointer<FpMinutia>,
            ffi.Int32,
            ffi.Pointer<FpMinutia>,
            ffi.Int32,
            ffi.Pointer<ffi.Int32>,
          )
        >
      >('fp_match_templates');
  late final _fp_match_templates = _fp_match_templatesPtr
      .asFunction<
        int Function(
          ffi.Pointer<FpMinutia>,
          int,
          ffi.Pointer<FpMinutia>,
          int,
          ffi.Pointer<ffi.Int32>,
        )
      >();

  /// 9. ISO/IEC 19794-2 template export
  int fp_export_iso_template(
    ffi.Pointer<FpMinutia> minutiae,
    int count,
    int finger_position,
    int ppi,
    ffi.Pointer<ffi.Uint8> out_buffer,
    int buffer_size,
    ffi.Pointer<ffi.Int32> out_length,
  ) {
    return _fp_export_iso_template(
      minutiae,
      count,
      finger_position,
      ppi,
      out_buffer,
      buffer_size,
      out_length,
    );
  }

  late final _fp_export_iso_templatePtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int32 Function(
            ffi.Pointer<FpMinutia>,
            ffi.Int32,
            ffi.Int32,
            ffi.Int32,
            ffi.Pointer<ffi.Uint8>,
            ffi.Int32,
            ffi.Pointer<ffi.Int32>,
          )
        >
      >('fp_export_iso_template');
  late final _fp_export_iso_template = _fp_export_iso_templatePtr
      .asFunction<
        int Function(
          ffi.Pointer<FpMinutia>,
          int,
          int,
          int,
          ffi.Pointer<ffi.Uint8>,
          int,
          ffi.Pointer<ffi.Int32>,
        )
      >();

  /// 10. WSQ compression / decompression
  int fp_wsq_compress(
    ffi.Pointer<ffi.Uint8> grayscale_img,
    int width,
    int height,
    int ppi,
    ffi.Pointer<ffi.Uint8> out_buffer,
    int buffer_size,
    ffi.Pointer<ffi.Int32> out_length,
  ) {
    return _fp_wsq_compress(
      grayscale_img,
      width,
      height,
      ppi,
      out_buffer,
      buffer_size,
      out_length,
    );
  }

  late final _fp_wsq_compressPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int32 Function(
            ffi.Pointer<ffi.Uint8>,
            ffi.Int32,
            ffi.Int32,
            ffi.Int32,
            ffi.Pointer<ffi.Uint8>,
            ffi.Int32,
            ffi.Pointer<ffi.Int32>,
          )
        >
      >('fp_wsq_compress');
  late final _fp_wsq_compress = _fp_wsq_compressPtr
      .asFunction<
        int Function(
          ffi.Pointer<ffi.Uint8>,
          int,
          int,
          int,
          ffi.Pointer<ffi.Uint8>,
          int,
          ffi.Pointer<ffi.Int32>,
        )
      >();
